# splendor

./: Makefile  README.md
.github/workflows/: CI.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: utils.py
backend/app/api/: main.py
backend/app/api/routers/: v1.py
backend/app/controllers/: games.py  messages.py  players.py  rooms.py  users.py
backend/app/models/: base.py  games.py  messages.py  rooms.py
backend/app/models/games/: cards.py
backend/app/models/rooms/: create.py  get_player_number.py  join.py  room.py
backend/app/services/: database.py  games.py  messages.py  players.py  rooms.py  users.py  utils.py
backend/app/utils/: errors.py  games.py  rooms.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/actions/: messages.ts
frontend/src/actions/games/: buyCard.ts  discardGems.ts  fetchGameData.ts  initialize.ts  reserveCard.ts  takeGems.ts
frontend/src/actions/room/: create.ts  create.tsx  join.ts  join.tsx  nickname.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(home)/: layout.tsx  page.tsx
frontend/src/components/game/: card-action-menu.tsx  card-row.tsx  closed-deck.tsx  game-board.tsx  game-card.tsx  game-over-screen.tsx  gem-bank.tsx  noble-tile.tsx  player-bar.tsx  reserved-cards-drawer.tsx
frontend/src/components/home/: create-room-button.tsx  join-room-group.tsx
frontend/src/lib/: constants.ts  games.ts  supabase.ts  utils.ts
frontend/src/state/: game.ts
frontend/src/types/: base.ts  cards.ts  games.ts  messages.ts  room.ts
(+11 files in other folders)
