[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jinyang628",email = "chenjinyang4192@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
